--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,10 @@
 <div class="main-content">
   <div class="row">
     <div class="col-md-12">
-      <p-card header="Current Services States ({{ currentTime }})">
+      <p-card
+        header="Current Services States ({{ currentTime }})"
+        subheader="dynamic update every 30 seconds to know the availability update as soon as possible at http://www.nfe.fazenda.gov.br/portal/disponibilidade.aspx"
+      >
         <p-table
           #dt1
           [value]="currentStates"
@@ -29,6 +32,7 @@
           [loading]="loading"
           [className]="'my-primeng-table'"
           [globalFilterFields]="['autorizador']"
+          styleClass="p-datatable-striped"
         >
           <ng-template pTemplate="caption">
             <div class="p-d-flex">
@@ -38,7 +42,7 @@
                 class="p-button-outlined"
                 icon="pi pi-filter-slash"
                 (click)="clear(dt1)"
-              ></button>       
+              ></button>
               <span class="p-input-icon-left p-ml-auto">
                 <i class="pi pi-search"></i>
                 <input
@@ -60,15 +64,7 @@
           <ng-template pTemplate="body" let-rowData let-columns="columns">
             <tr [ngClass]="'currents'">
               <td *ngFor="let col of columns">
-                <div
-                  [ngClass]="{
-                    upService: rowData[col.field] === 'up',
-                    downService: rowData[col.field] === 'down',
-                    halfService: rowData[col.field] === 'half'
-                  }"
-                >
-                  {{ rowData[col.field] }}
-                </div>
+                <div [innerHtml]="rowData[col.field] | mySecondPipe"></div>
               </td>
             </tr>
           </ng-template>
@@ -77,7 +73,7 @@
     </div>
   </div>
 
-  <div class="row" style="display: none;">
+  <div class="row" style="display: none">
     <div class="col-lg-4">
       <div class="card card-chart">
         <div class="card-header">
@@ -204,7 +200,7 @@
       </div>
     </div>
   </div>
-  <div class="row" style="display: none;">
+  <div class="row" style="display: none">
     <div class="col-md-6">
       <div class="card card-tasks">
         <div class="card-header">
