--- a/src/assets/scss/now-ui-dashboard/_variables.scss
+++ b/src/assets/scss/now-ui-dashboard/_variables.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 //== Buttons
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
@@ -243,8 +244,8 @@ $nc-font-path:        '../fonts' !default;
 $nc-font-size-base:   14px !default;
 $nc-css-prefix:       now-ui !default;
 $nc-background-color:     #eee !default;
-$nc-li-width:         (30em / 14) !default;
-$nc-padding-width:    (1em/3) !default;
+$nc-li-width:         2.14em !default;
+$nc-padding-width:    .33em !default;
 
 // Social icons color
 $social-twitter:                   #55acee !default;
